# run-sous-bpm

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY_AUDIT.md  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: main.rs  middleware.rs  tracing_config.rs
backend/api/src/handlers/: auth.rs  health.rs  mod.rs  music.rs  oauth.rs  root.rs  strava.rs  user.rs
backend/api/src/responses/: activity_music.rs  lastfm_range.rs  mod.rs
backend/core/: Cargo.toml
backend/core/src/: lib.rs
backend/core/src/auth/: backend.rs  mod.rs  password.rs
backend/core/src/config/: mod.rs  oauth.rs  secret.rs
backend/core/src/crypto/: cipher.rs  error.rs  key.rs  mod.rs  payload.rs  service.rs
backend/core/src/database/: connection.rs  mod.rs
backend/core/src/database/entities/: activity.rs  activity_stream.rs  listen.rs  mod.rs  oauth_token.rs  prelude.rs  track.rs  user.rs
backend/core/src/database/repositories/: activity_repository.rs  activity_stream_repository.rs  listen_repository.rs  mod.rs  oauth_token_repository.rs  track_repository.rs  user_repository.rs
backend/core/src/geo/: mod.rs  simplification.rs
backend/core/src/models/: activity.rs  activity_stream.rs  listen.rs  mod.rs  track.rs
backend/core/src/services/: analytics_service.rs  mod.rs  music_service.rs  oauth.rs  oauth_session.rs  user_service.rs  workout.rs
backend/integrations/: Cargo.toml
backend/integrations/src/: lib.rs
backend/integrations/src/common/: error.rs  http_client.rs  integration_client.rs  mod.rs
backend/integrations/src/lastfm/: client.rs
backend/integrations/src/spotify/: client.rs  mod.rs
backend/integrations/src/strava/: client.rs  mod.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20251005_175514_create_table_oauth_token.rs  m20251005_175525_create_table_user.rs  m20251014_110258_add_password_to_user.rs  m20251015_112925_create_table_activities.rs  m20251023_222522_create_table_tracks_listens.rs  m20251029_210155_add_lastfm_name_col_user.rs  main.rs
docker/: init.sql
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/card/: card-header.svelte  card.svelte
frontend/src/lib/components/ui/sonner/: sonner.svelte
frontend/src/lib/features/activity/: activity-music.service.ts  activity.service.ts  index.ts
frontend/src/lib/features/activity/components/: ActivityCard.svelte  ActivityList.svelte  MapTooltip.svelte
frontend/src/lib/features/activity/components/timeline/: MusicTimeline.svelte  TimelineItem.svelte
frontend/src/lib/features/activity/state/: mapInteractionState.svelte.ts  mapLifecycleState.svelte.ts
frontend/src/lib/features/activity/stores/: activities.store.ts
frontend/src/lib/features/activity/utils/: activity-formatters.ts  geoJsonTransformers.ts  route-simplification.ts  timeline-refs.ts  track-colors.ts
frontend/src/lib/features/auth/: auth.service.ts  oauth.service.ts  user.service.ts
frontend/src/lib/schemas/: activity.ts  auth.ts  user.ts
frontend/src/lib/shared/api/: client.ts  endpoints.ts  types.ts
frontend/src/lib/stores/: user.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/auth/: +layout.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/register/: +page.svelte
frontend/src/routes/dashboard/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/dashboard/activities/: +page.svelte
frontend/src/routes/oauth/callback/: +page.svelte
