[workspace]
members = ["api", "core", "integrations", "migration"]
resolver = "3"

[workspace.dependencies]
axum-login = { version = "0.18.0" }
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono"] }
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
reqwest = { version = "0.12.24", features = ["json"] }
oauth2 = "5.0.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
dotenvy = "0.15.7"
serde_json = "1.0.145"
tower = "0.5.2"
tower-http = "0.6.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
strum = { version = "0.27.2", features = ["derive"] }
moka = { version = "0.12.11", features = ["sync"] }
argon2 = { version = "0.5.3", features = ["std"] }
aes-gcm = { version = "0.10.3" }
hkdf = "0.12.4"
sha2 = "0.10.9"
rand = "0.9.2"
rand_core = { version = "0.9.3", features = ["std"] }
base64 = "0.22.1"
tower-sessions = { version = "0.14.0", features = ["memory-store"] }
validator = "0.20.0"
async-trait = "0.1.89"
lastfm-client = "2.1.0"
urlencoding = "2.1.3"
zeroize = "1.8.2"
