[package]
name = "run-sous-bpm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
run-sous-bpm-core = { path = "../core" }
run-sous-bpm-integrations = { path = "../integrations" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
axum-login = { workspace = true }
tower-sessions = { workspace = true }
validator = { workspace = true, features = ["derive"] }
urlencoding = { workspace = true }
