[package]
name = "run-sous-bpm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
run-sous-bpm-integrations = { path = "../integrations" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
oauth2.workspace = true
dotenvy.workspace = true
strum = { workspace = true }
moka = { workspace = true }
axum-login = { workspace = true }
argon2 = { workspace = true }
rand_core = { workspace = true }
validator = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
async-trait = { workspace = true }
